--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "reactfoliobs4_akj",
-  "homepage": "https://akjha96.github.io/ReactifolioBs4_Akj",
+  "name": "portfolio",
+  "homepage": "https://hasheemismath.github.io/portfolio",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
