home directory changed

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://hasheemismath.github.io/portfolio",
+  "homepage": "https://hasheemismath.github.io/myPrortfolio",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
